# session-state-analyzer

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
.streamlit/: config.toml
data/examples/ableton/: README.md  example_session.json  example_session_revision.json
data/examples/cubase/: example_cubase_session.json
docs/: COMPATIBILITY_LADDER.md  CONTRACT.md  CONTRIBUTION.md  DEPLOY.md  MANUAL.md  METRICS.md  PIVOT.md  SOURCE_EXPLORERS_AUDIT.md
docs/ableton/: cubase_mapping.md  demo_script.md  research_context.md
docs/ableton/application/: SUBMISSION_README.md  cv_notes.md  email_draft.md  motivation_letter.md  thesis_proposal.md
docs/figures/: README.md
docs/reaper/demo/: demo.srt
eval/: benchmark_role_inference.py
extension/session-state-exporter/: README.md  manifest.json  package-lock.json  package.json
extension/session-state-exporter/src/: extension.ts
fixtures/adapters/ableton/: README.md  canonical.snapshot.json  capabilities.json  native.json  validation.json
fixtures/adapters/cubase/: README.md  canonical.snapshot.json  native.json  validation.json
fixtures/adapters/logic/: README.md  canonical.snapshot.json  native.json  validation.json
fixtures/adapters/logic_real/: README.md  canonical.snapshot.json  capabilities.json  native.json  validation.json
fixtures/adapters/reaper/: README.md  adapter_descriptor.json  canonical.snapshot.json  capabilities.json  native.json  validation.json
fixtures/adapters/reaper_real/: README.md  canonical.snapshot.json  capabilities.json  native.json  validation.json
fixtures/cross-daw/X04_effect_return/: intent.md
fixtures/cross-daw/X06_grouping_depth/: intent.md
fixtures/experiments/effect_send/: README.md  intervention.json
fixtures/experiments/parameter_change/: README.md  intervention.json  make_inputs.py
fixtures/modulation/: intent.md
src/session_explorer/: __init__.py
tests/analyzer/: test_alignment.py  test_atlas.py  test_conformance.py  test_dataset_export.py  test_fixture_loading.py  test_from_nested.py  test_graph_analysis.py  test_graph_layers.py  test_grouping.py  test_interventions.py  test_ladder.py  test_loaders.py  test_metrics.py  test_variants.py  test_workbench_modes.py  test_x04_fixture.py  test_x06_fixture.py
tests/core/: conftest.py  test_diff.py  test_driver_registry.py  test_export.py  test_fingerprint.py  test_graph.py  test_matching.py  test_models.py  test_observability.py  test_recommend.py  test_roles.py  test_visualization.py
(+178 files in other folders)
