[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "session-state-explorer"
version = "1.0.0"
description = "Unified DAW session-state explorer: interpretable, partially observable session graphs for Ableton Live, Cubase, REAPER, and Logic Pro"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Zachary Scheffler" }]
keywords = ["daw", "music-production", "session-state", "graph", "interpretability"]
dependencies = [
    "pydantic>=2.5",
    "networkx>=3.1",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.32", "plotly>=5.18", "pyvis>=0.3.2"]
audio = ["librosa>=0.10", "soundfile>=0.12", "pyloudnorm>=0.1.1"]
midi = ["mido>=1.3"]
score = ["music21>=9.1"]
essentia = ["essentia"]
full = ["session-state-explorer[ui,audio,midi,score]"]
dev = ["pytest>=7.4"]

[project.scripts]
session-explorer = "session_explorer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
