[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "session-state-analyzer"
version = "1.0.0"
description = "Session State Analyzer: the analytical layer over four DAW session-state explorer adapters — interpretable, partially observable session graphs for Ableton Live, Cubase, REAPER, and Logic Pro"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Zachary Scheffler" }]
keywords = ["daw", "music-production", "session-state", "graph", "interpretability"]
dependencies = [
    "pydantic>=2.5",
    "networkx>=3.1",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.32", "plotly>=5.18", "pyvis>=0.3.2"]
# The workbench renders pre-computed descriptor fixtures and never decodes audio,
# so the UI/deploy path (requirements.txt) installs only `ui`. `audio` is an
# opt-in extra for the offline fixture-generation scripts (fixtures/**/make_inputs.py)
# and the core/audio tests; `essentia` layers on its optional high-level adapter.
audio = ["librosa>=0.10", "soundfile>=0.12", "pyloudnorm>=0.1.1"]
essentia = ["essentia"]
full = ["session-state-analyzer[ui,audio]"]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
